# eirene-v1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  test_api.py
chat/: .dockerignore  .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
chat/db/: embed.py
chat/db/legacy_vector_db/: README.md
chat/db/medical_vector_db/: README.md
chat/db/medical_vector_db/utils/: parse_txt.py  translation.py  urls.md
chat/db/user_session/: user_session.sql
chat/mem0_naver/: README.md  __init__.py
chat/mem0_naver/configs/: base.py  prompts.py
chat/mem0_naver/configs/embeddings/: base.py
chat/mem0_naver/configs/llms/: base.py
chat/mem0_naver/configs/vector_stores/: faiss.py
chat/mem0_naver/embeddings/: base.py  configs.py  langchain.py  mock.py
chat/mem0_naver/graphs/: configs.py  tools.py
chat/mem0_naver/graphs/neptune/: base.py  main.py
chat/mem0_naver/llms/: base.py  configs.py  langchain.py
chat/mem0_naver/memory/: graph_memory.py  main.py  memgraph_memory.py  telemetry.py  utils.py
chat/mem0_naver/proxy/: main.py
chat/mem0_naver/utils/: factory.py
chat/mem0_naver/vector_stores/: configs.py  faiss.py  langchain.py
chat/modules/: agents.py  database.py  memory.py  prompt.py  router.py  scoring.py  utils.py
src/: README.md  app.html
src/lib/: client_api.js
src/lib/assets/: README.md
src/routes/: +page.svelte
src/routes/chat/: +page.svelte  SentenceBox.svelte
